--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <visitor>true</visitor>
+          <listener>true</listener>
+        </configuration>
       </plugin>
     </plugins>
   </build>
