--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         </executions>
         <configuration>
           <visitor>true</visitor>
-          <listener>true</listener>
+          <listener>false</listener>
         </configuration>
       </plugin>
     </plugins>
