--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,18 @@
   </properties>
 
   <dependencies>
+    <!-- JUnit Jupiter API for writing tests -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.7.0</version> <!-- Use the latest version available -->
+      <scope>test</scope>
+    </dependency>
+    <!-- JUnit Jupiter Engine for running tests -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.7.0</version> <!-- Use the latest version available -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -44,6 +52,11 @@
           <visitor>true</visitor>
           <listener>false</listener>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version> <!-- Ensure compatibility with JUnit 5 -->
       </plugin>
     </plugins>
   </build>
