--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,16 @@
       <artifactId>antlr4-runtime</artifactId>
       <version>4.13.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.xmlunit</groupId>
+        <artifactId>xmlunit-core</artifactId>
+        <version>2.9.1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.xmlunit</groupId>
+        <artifactId>xmlunit-matchers</artifactId>
+        <version>2.9.1</version>
+    </dependency>
   </dependencies>
 
   <build>
