--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
         <artifactId>xmlunit-matchers</artifactId>
         <version>2.9.1</version>
     </dependency>
+    <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>1.6.0</version>
+    </dependency>
   </dependencies>
 
   <build>
